# srdn

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
cli/: .gitignore  postinstall.js
scripts/: build.js
src/: main.rs  util.rs
tests/: package.json
tests/a/: a.module.css
tests/src/: global.css
tests/src/a/: a.module.css
tests/src/b/: b.module.css
