[package]
authors = ["Hugo Nogueira <hello@sardine.dev>"]
name = "srdn"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sardinedev/srdn"

[[bin]]
name = "srdn"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.78" }
parcel_css = "1.0.0-alpha.21"
browserslist-rs = { version = "0.9.0" }
glob = "0.3.0"
